--- a/index.html
+++ b/index.html
@@ -96,8 +96,12 @@
             document.getElementById("display-resultado").innerHTML = "A jugar!";
             document.getElementById("text1").value = ""
             document.getElementById("text1").focus();
+            intentos = 0
         }
     </script>
 </body>
+
+</html>
+
 
 </html>
